# VulkII

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Readme.md  imgui.ini  list.dot  scene_state  simplefont.h  tests.cpp
examples/: compute_rasterization.cpp  dispatch_kernel.cpp  draw_indirect.cpp  dx12_test.cpp  gpu_feedback.cpp  mesh_lod.cpp  mesh_tool.cpp  oit.cpp  sdf.cpp  simple_compute.cpp  simple_rendering.cpp  ssr.cpp  triangulation.cpp  virtual_textures.cpp
examples/shaders/: compute_rasterization.hlsl  declarations.hlsl  gi_compute_rasterization.hlsl  ssr.hlsl
include/: rendering.hpp  rendering_utils.hpp  scene.hpp  script.hpp  utils.hlsli  utils.hpp
shaders/: compute_render_1.hlsl
src/: dx12_backend.cpp  files.cpp  main.cpp  rt.cpp  vk_backend.cpp
tests/: scene_1.lsp
